<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/notification_card"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="#F3F3F3"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/unread_yellow_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:background="#fff5cc"
            android:orientation="horizontal"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/reminder_name"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="{type} Reminder"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reminder_message"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="1dp"
                android:layout_marginBottom="5dp"
                android:text="Reminder message will be written here"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/reminder_time"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="3dp"
                android:text="time"
                android:textAlignment="textEnd"
                android:textSize="10sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>