...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/bell_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
            android:layout_marginStart="120dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="60dp"
            android:elevation="5dp"/>

        <LinearLayout
            android:id="@+id/outside_notification_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:orientation="vertical">

        </LinearLayout>
...
